duck/test/fail/unify.duck
import base
main = testAll

_ = case True of
  True -> 1
  False -> 'a'
